# easyfix

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
easyfix/: Cargo.toml
easyfix-core/: Cargo.toml  README.md
easyfix-core/examples/: dynamic_message.rs
easyfix-core/src/: base_messages.rs  basic_types.rs  country.rs  currency.rs  deserializer.rs  lib.rs  message.rs  serializer.rs  version.rs
easyfix-core/src/deserializer/: tests.rs
easyfix-core/src/version/: tests.rs
easyfix-dictionary/: Cargo.toml  README.md
easyfix-dictionary/src/: dictionary.rs  lib.rs  xml.rs
easyfix-dictionary/src/dictionary/: builder.rs  error.rs  resolver.rs  tests.rs  types.rs  version.rs
easyfix-dictionary/src/xml/: tests.rs
easyfix-macros/: Cargo.toml  README.md
easyfix-macros/src/: lib.rs
easyfix-macros/tests/: test.rs
easyfix-macros/tests/scenarios/: compile_ok.rs  fail_on_control_character.rs  fail_on_control_character.stderr  fail_on_multibyte_character.rs  fail_on_multibyte_character.stderr
easyfix-messages/: Cargo.toml  README.md  build.rs
easyfix-messages/easyfix-messages-gen/: Cargo.toml
easyfix-messages/easyfix-messages-gen/src/: code_gen.rs  gen.rs  lib.rs
easyfix-messages/easyfix-messages-gen/src/code_gen/: admin.rs  enumeration.rs  group.rs  header.rs  member.rs  message.rs  message_enum.rs  structure.rs  trailer.rs
easyfix-messages/src/: code_gen.rs  country.rs  currency.rs  deserializer.rs  fields.rs  groups.rs  lib.rs  main.rs  messages.rs  parser.rs  serializer.rs  types.rs
easyfix-messages/src/code_gen/: admin.rs  enumeration.rs  group.rs  header.rs  member.rs  message.rs  message_enum.rs  trailer.rs
easyfix-messages/src/deserializer/: tests.rs
easyfix-messages/src/fields/: basic_types.rs
easyfix-messages/tests/: admin_base_conversions.rs  header_access.rs  header_base_conversions.rs  message_trait.rs  messages.rs  serialize_deserialize.rs
easyfix-messages/tests/messages/: mod.rs
easyfix-messages/xml/: FIX50SP2.xml  FIXT11-test.xml  FIXT11.xml
easyfix-session/: Cargo.toml
easyfix-session/examples/: acceptor.rs
easyfix-session/src/: acceptor.rs  application.rs  async_cell.rs  codec.rs  connection.rs  initiator.rs  io.rs  lib.rs  messages_storage.rs  session.rs  session_id.rs  session_state.rs  settings.rs
easyfix-session/src/connection/: input_stream.rs  output_stream.rs
easyfix-session/src/io/: input_stream.rs  output_stream.rs  time.rs
easyfix-session/tests/: connection_robustness.rs
easyfix-test-messages/: Cargo.toml
easyfix-test-messages/src/: lib.rs
easyfix-test-messages/xml/: FIX50SP2-test.xml
easyfix/src/: lib.rs  main.rs
examples/acceptor/: Cargo.toml  build.rs
examples/acceptor/src/: main.rs
examples/acceptor/xml/: FIXT11-mini.xml
scripts/: generate_fix_xml.sh  regenerate-test-messages.sh  repo_to_easyfix.py
src/: lib.rs  main.rs
