[workspace]

resolver = "2"

members = [
    "easyfix",
    "easyfix-dictionary",
    "easyfix-macros",
    "easyfix-messages",
    "easyfix-session",
]

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5"
async-stream = "0.3.4"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1.37"
