[workspace]

resolver = "2"

members = [
    "easyfix",
    "easyfix-core",
    "easyfix-dictionary",
    "easyfix-macros",
    "easyfix-messages",
    "easyfix-session",
    "examples/acceptor",
]

default-members = [
    "easyfix",
    "easyfix-core",
    "easyfix-dictionary",
    "easyfix-macros",
    "easyfix-messages",
    "easyfix-session",
]

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5"
async-stream = "0.3.6"
chrono = "0.4.38"
clap = "4.6"
convert_case = "0.6"
easyfix-core = { version = "0.1.0", path = "easyfix-core" }
easyfix-dictionary = { version = "0.4.2", path = "easyfix-dictionary" }
easyfix-macros = { version = "0.1.3", path = "easyfix-macros" }
easyfix-messages = { version = "0.6.4", path = "easyfix-messages" }
easyfix-session = { version = "0.11.5", path = "easyfix-session" }
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
syn = "2.0"
thiserror = "2.0"
tracing = "0.1.40"

[workspace.lints.clippy]
absolute_paths = "deny"
