[package]
name = "easyfix-macros"
version = "0.1.3"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) toolset - macros."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"

[dev-dependencies]
easyfix-messages = { path = "../easyfix-messages" }
trybuild = "1.0"
