[package]
name = "easyfix-macros"
version = "0.1.3"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) toolset - macros."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
easyfix-core = { version = "0.1.0", path = "../easyfix-core" }
trybuild = "1.0"
