[package]
name = "easyfix-messages"
version = "0.5.4"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) toolset - messages."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
itoa = "1.0"
rust_decimal = "1.35"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
easyfix-messages-gen = { version = "0.5.3", path = "easyfix-messages-gen" }

[dev-dependencies]
assert_matches = { workspace = true }
