[package]
name = "easyfix-messages"
version = "0.6.3"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) toolset - messages."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[features]
default = []
serialize = ["easyfix-messages-gen/serialize"]
deserialize = ["easyfix-messages-gen/deserialize"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
itoa = "1.0"
rust_decimal = { version = "1.36", default-features = false }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
easyfix-messages-gen = { version = "0.6.1", path = "easyfix-messages-gen" }

[dev-dependencies]
assert_matches = { workspace = true }
