[package]
name = "easyfix-messages"
version = "0.6.4"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) toolset - messages code generator."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
convert_case = { workspace = true }
easyfix-dictionary = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
assert_matches = { workspace = true }
easyfix-core = { workspace = true }
easyfix-macros = { workspace = true }
