[package]
name = "easyfix"
version = "0.12.5"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) engine."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2021"

[features]
default = []
serialize-messages = ["easyfix-messages/serialize"]
deserialize-messages = ["easyfix-messages/deserialize"]

[dependencies]
easyfix-dictionary = { version = "0.4.1", path = "../easyfix-dictionary" }
easyfix-macros = { version = "0.1.2", path = "../easyfix-macros" }
easyfix-messages = { version = "0.6.3", path = "../easyfix-messages" }
easyfix-session = { version = "0.9.5", path = "../easyfix-session" }
