[package]
name = "easyfix"
version = "0.14.3"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) engine."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[features]
default = []
serialize-messages = ["easyfix-messages/serialize"]
deserialize-messages = ["easyfix-messages/deserialize"]

[dependencies]
easyfix-dictionary = { version = "0.4.2", path = "../easyfix-dictionary" }
easyfix-macros = { version = "0.1.3", path = "../easyfix-macros" }
easyfix-messages = { version = "0.6.4", path = "../easyfix-messages" }
easyfix-session = { version = "0.11.3", path = "../easyfix-session" }
