[package]
name = "easyfix"
version = "0.14.5"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) engine."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[features]
default = []
full = ["codegen", "dictionary", "session"]
codegen = ["dep:easyfix-messages"]
dictionary = ["dep:easyfix-dictionary"]
session = ["dep:easyfix-session"]
serde-serialize = ["easyfix-core/serde-serialize", "easyfix-session?/serde-serialize"]
serde-deserialize = ["easyfix-core/serde-deserialize", "easyfix-session?/serde-deserialize"]

[dependencies]
easyfix-core = { workspace = true }
easyfix-dictionary = { workspace = true, optional = true }
easyfix-macros = { workspace = true }
easyfix-messages = { workspace = true, optional = true }
easyfix-session = { workspace = true, optional = true }
