[package]
name = "easyfix-messages-gen"
version = "0.6.1"
authors = ["Łukasz Dańko <lukasz.danko@gmail.com>"]
license = "MIT"
description = "Easy FIX (Financial Information Exchange) toolset - messages generator."
repository = "https://github.com/ldanko/easyfix"
readme = "README.md"
edition = "2024"

[features]
default = []
serialize = []
deserialize = []

[dependencies]
anyhow = { workspace = true }
convert_case = "0.6"
easyfix-dictionary = { version = "0.4.1", path = "../../easyfix-dictionary" }
proc-macro2 = "1.0"
quote = "1.0"
strum = "0.26"
strum_macros = "0.26"
